# NivelesDeNiveles

./: .clocignore  .gitignore  App.tsx  NivelesDeNiveles.code-workspace  PRIVACY.md  README.md  Readme.md  Readme.txt  app.json  blog-details.html  blog.html  dona.html  index.html  index.js  nosotros.html  package-lock.json  package.json  portfolio-details.html  react-native-config.d.ts  react-native.config.js  sample-inner-page.html  tailwind.config.js
android/: build.gradle  gradlew.bat  settings.gradle
arduino/: arduino.ino  index.ts  package-lock.json  package.json  server.py
backend/: Cargo.toml  index.ts  main.py  nixpacks.toml  package-lock.json  package.json  plan_a.ino  plan_b.ino  plan_c.ino  shell.nix
backend/models/: events.ts  incident.ts  report.ts  sensor.ts  status.ts  types.ts  user.ts
backend/old/: index.ts  package-lock.json  package.json
backend/old/models/: status.ts  user.ts
backend/old/routers/: report.router.ts  sensors.router.ts  users.router.ts
backend/old/services/: database.service.ts
backend/routers/: advice.router.ts  report.router.ts  sensors.router.ts  users.router.ts  verify.router.ts
backend/services/: checkInfo.service.ts  database.service.ts  prune.service.ts
backend/src/: database.rs  main.rs  routes.rs  status.rs  types.rs  utils.rs  websocket.rs
backend/src/routes/: report.rs  sensors.rs  users.rs  verify.rs
docs/: CNAME  index.html  inner-page.html  policy_en.html  policy_es.html  policy_zh.html  portfolio-details.html
ios/: Podfile  SplashScreen.storyboard  link-assets-manifest.json
web/: index.html  (+5 more)
(+110 files in other folders)
