[package]
name = "nivelesdeniveles-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
dotenv = "0.15.0"
haversine = "0.2.1"
onesignal-rust-api = "2.0.2"

[dependencies.mongodb]
version = "3.1.0"
