[package]
name = "nivelesdeniveles-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
# axum-macros = "0.4.2"
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
dotenv = "0.15.0"
haversine = "0.2.1"
onesignal-rust-api = "2.0.2"
# openssl = "0.10.68"
reqwest = {version = "0.12.9", features = ["blocking", "json"]}
serde_json = "1.0.132"
base64 = "0.22.1"

[dependencies.mongodb]
version = "3.1.0"
