[package]
name = "nivelesdeniveles-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.7"}
socketioxide = "0.15.1"
axum-extra = "0.9.4"
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
dotenv = "0.15.0"
haversine = "0.2.1"
onesignal-rust-api = "2.0.2"
openssl = "0.10.68"
reqwest = {version = "0.12.9", features = ["blocking", "json"]}
serde_json = "1.0.132"
base64 = "0.22.1"
rmpv = "1.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
strum = "0.26.3"
strum_macros = "0.26.4"

[dependencies.mongodb]
version = "3.1.0"
